chamber/css/base.css
/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

/*----------- apply a natural box layout model to all elements --------------*/
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background-color: #283618;
}

header img {
  max-width: 5em;
  padding-top: 2em;
}

header {
  background-color: #606c38;
  background-image: url("../images/pg-mnt-1100.jpg");
  color: black;
  font-family: "Barlow Semi Condensed", sans-serif;
  font-size: 10px;
  padding-bottom: 5px;
  position: relative;
}

nav button {
  margin: 0.2rem 2vw;
  background-color: transparent;
  border: none;
  font-size: 2rem;
  color: #bc6c25;
}

nav {
  text-align: right;
  font-size: 1em;
}

nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav ul li a {
  display: block;
  padding: 0.8rem 2vw;
  text-decoration: none;
  background-color: #283618;
  color: white;
  border-top: 1px solid rgba(0, 0, 0, 0.5);
}

nav ul li a:hover {
  background-color: rgba(0, 0, 0, 0.3);
}

nav ul li.active a {
  background-color: rgba(0, 0, 0, 0.2);
  color: white;
}

nav ul {
  display: none;
}

nav ul.open {
  display: block;
}

#hamburgerBtn span:nth-child(1) {
  display: block;
}
#hamburgerBtn span:nth-child(2) {
  display: none;
}

#hamburgerBtn.open span:nth-child(1) {
  display: none;
}
#hamburgerBtn.open span:nth-child(2) {
  display: block;
}

h1,
h2,
h3 {
  font-family: "Barlow Semi Condensed", sans-serif;
}

.socialmedia img {
  max-width: 1.5em;
}

.date {
  margin: 0.5rem;
  border: 1px solid #bbb;
  padding: 0.75rem;
  background-color: #f7f0e3;
  text-align: center;
  font-weight: 800;
  font-size: 1.3em;
  opacity: 95%;
}

.top {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr 1fr;
  margin-left: 10px;
  grid-gap: 5px;
}

.top img {
  grid-column: 1/2;
  justify-self: center;
}

.byline {
  font-size: 0.6em;
}

h1 {
  line-height: 0.8em;
  grid-column: 2/3;
  align-self: center;
}

.social {
  grid-column: 3/4;
  justify-self: end;
  align-self: center;
}

nav {
  grid-column: 4/5;
  align-self: center;
  justify-self: start;
}

.socialmedia {
  margin-left: 5px;
}

#banner {
  position: absolute;
  background-color: #bc6c25;
  color: white;
  padding: 2px;
  font-size: 10px;
  font-weight: 100;
  border: 1px solid rgba(0, 0, 0, 0.2);
  top: 55px;
  z-index: 1;
}

.num-of-visits {
}

/*--------- index.html main -----------*/

main {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
  /* grid-template-columns: 1fr; */
  /* grid-gap: 5px; */
  /* background-color: #606c38; */
  font-family: "Lora", serif;
  text-align: center;
  margin: 5px;
}

main picture.hero {
  width: 100%;
  margin: 0 0 0 0;
  /* background-color: #606c38; */
  position: relative;
  grid-row: 1/2;
  align-self: center;
}

main picture.hero img {
  width: 100%;
  /* object-fit: cover; */
}

#joinBtn {
  position: absolute;
  top: 8.5rem;
  right: 1rem;
  background-color: #bc6c25;
  font-size: 0.9em;
  color: white;
  padding: 0.6em;
}

main div {
  background-color: #f7f0e3;
  /* padding: 2px; */
  /* border: 3px solid #606c38; */
  /* padding: 10px; */
}

main ul {
  list-style: none;
}

.join {
  display: none;
}

.spotlight-3 {
  display: none;
}

/*-------- discover.html main -------*/
/* main .discover-grid {
  display: flex;
  flex-direction: column;
} */

.gallery {
  grid-row: 1/6;
}
.gallery picture {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 10px;
}

.golden-gallery img {
  /* grid-column: 1/3; */
  justify-self: center;
  align-self: center;
  text-align: center;
}

.golden-gallery:hover {
  opacity: 0.5;
}

/* .gallery-description { */
/* grid-column: 2/3; */

/*-------- footer -------*/

footer {
  display: block;
  background-color: #606c38;
  color: white;
  font-family: "Barlow Semi Condensed", sans-serif;
  text-align: center;
}

footer img {
  max-width: 5em;
  margin-top: 10px;
}

footer li {
  list-style: none;
}

.address {
  font-size: 1.1em;
  font-weight: 700;
}

.foot {
  line-height: 1.3em;
  padding-bottom: 5px;
}

.foot-name {
  font-weight: 700;
}

/* .num-of-visits {
  background-color: #bc6c25;
} */

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

